# bvh

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bvh.cpp  bvh.hpp  bvh_internal.hpp  camera.hpp  main.cpp  main.hpp  ray_intersection.hpp  raytrace.cpp  raytrace.hpp  render_stl_to_ppm.cpp  render_tri_to_ppm.cpp  segment_intersection.hpp  subdivision.hpp  utils.cpp  utils.hpp  vec4.hpp  vec4_non_simd.hpp  vec4_simd.hpp
